--- a/index.css
+++ b/index.css
@@ -1,80 +1,83 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans');
+@import url("https://fonts.googleapis.com/css?family=Open+Sans");
 
 * {
-	margin: 0;
-	border: 0;
-	padding: 0;
-	outline: none;
+    margin: 0;
+    border: 0;
+    padding: 0;
+    outline: none;
 }
 
 body {
-	font-family: 'Open Sans';
-	
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-direction: column;
+    font-family: "Open Sans";
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 h1 {
-	color: #555;
-	font-size: 3em;
+    color: #555;
+    font-size: 3em;
 }
 
 form {
-	font-size: 1.1em;
-	margin: 1em 20px;
-	
-	display: flex;
-	flex-direction: column;
+    font-size: 1.1em;
+    margin: 1em 20px;
+
+    display: flex;
+    flex-direction: column;
 }
 
 div {
-	margin-bottom: 10px;
-	
-	display: flex;
-	align-items: center;
+    margin-bottom: 10px;
+
+    display: flex;
+    align-items: center;
 }
 
-label, button {
-	background: none;
-	border: 1px solid dodgerblue;
-	border-radius: 10px;
-	color: dodgerblue;
-	font: inherit;
-	padding: 5px 20px;
+label,
+button {
+    background: none;
+    border: 1px solid dodgerblue;
+    border-radius: 10px;
+    color: dodgerblue;
+    font: inherit;
+    padding: 5px 20px;
 }
-label:hover, button:hover {
-	background: dodgerblue;
-	color: white;
+label:hover,
+button:hover {
+    background: dodgerblue;
+    color: white;
 }
-label:active, button:active {
-	transform: translateY(1px);
+label:active,
+button:active {
+    transform: translateY(1px);
 }
 
 span {
-	color: #777;
-	display: block;
-	margin-left: 10px;
-	overflow: hidden;
-	text-overflow: ellipsis;
-	white-space: nowrap;
-	
-	max-width: 30vw;
-	
-	flex-grow: 1;
+    color: #777;
+    display: block;
+    margin-left: 10px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+    max-width: 30vw;
+
+    flex-grow: 1;
 }
 
 #url {
-	background: white;
-	box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-	border-radius: 10px;
-	font: inherit;
-	font-size: 1rem;
-	margin-right: 10px;
-	padding: 5px 20px;
-	
-	min-width: 30vw;
-	
-	flex-grow: 1;
+    background: white;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    font: inherit;
+    font-size: 1rem;
+    margin-right: 10px;
+    padding: 5px 20px;
+
+    min-width: 30vw;
+
+    flex-grow: 1;
 }
