--- a/index.css
+++ b/index.css
@@ -1,83 +1,85 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans");
-
 * {
     margin: 0;
     border: 0;
     padding: 0;
     outline: none;
+    box-sizing: border-box;
 }
 
 body {
-    font-family: "Open Sans";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+        "Helvetica Neue", sans-serif;
+}
+
+main {
+    padding: 24px;
+    text-align: center;
+
+    min-height: 100vh;
 
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
+    gap: 1em;
+    justify-content: center;
 }
 
 h1 {
-    color: #555;
-    font-size: 3em;
+    font-size: 2.5em;
 }
 
-form {
-    font-size: 1.1em;
-    margin: 1em 20px;
+h6 {
+    font-size: 1em;
+}
 
+#visual-form {
     display: flex;
     flex-direction: column;
+    gap: 1em;
 }
 
-div {
-    margin-bottom: 10px;
-
-    display: flex;
-    align-items: center;
+#info.error {
+    color: #dc3545;
 }
 
-label,
+#image-preview {
+    box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 4px 4px rgba(0, 0, 0, 0.05), 0 8px 8px rgba(0, 0, 0, 0.05);
+    max-height: 75vh;
+    max-width: 100%;
+}
+
+#image-preview[src=""] {
+    display: none;
+}
+
+input[type="url"],
 button {
-    background: none;
-    border: 1px solid dodgerblue;
-    border-radius: 10px;
-    color: dodgerblue;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0.5em;
     font: inherit;
-    padding: 5px 20px;
+    padding: 0 0.5em;
+
+    height: 2em;
 }
-label:hover,
-button:hover {
-    background: dodgerblue;
+
+input[type="url"] {
+    background: whitesmoke;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    border-radius: 0.5em;
+    padding: 0 0.5em;
+
+    height: 2em;
+}
+
+input[type="url"]:invalid {
+    border-color: #dc3545;
+}
+
+button {
+    background: #0d6efd;
     color: white;
 }
-label:active,
+
 button:active {
-    transform: translateY(1px);
-}
-
-span {
-    color: #777;
-    display: block;
-    margin-left: 10px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-
-    max-width: 30vw;
-
-    flex-grow: 1;
-}
-
-#url {
-    background: white;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    font: inherit;
-    font-size: 1rem;
-    margin-right: 10px;
-    padding: 5px 20px;
-
-    min-width: 30vw;
-
-    flex-grow: 1;
+    border: 0;
 }
