--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ main {
     min-height: 100vh;
 
     display: flex;
-    align-items: center;
+    align-items: stretch;
     flex-direction: column;
     gap: 1em;
     justify-content: center;
@@ -34,7 +34,10 @@ h6 {
 }
 
 #visual-form {
+    max-width: 512px;
+
     display: flex;
+    align-self: center;
     flex-direction: column;
     gap: 1em;
 }
@@ -45,8 +48,11 @@ h6 {
 
 #image-preview {
     box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05), 0 4px 4px rgba(0, 0, 0, 0.05), 0 8px 8px rgba(0, 0, 0, 0.05);
+
     max-height: 75vh;
     max-width: 100%;
+
+    align-self: center;
 }
 
 #image-preview[src=""] {
@@ -69,6 +75,7 @@ input[type="url"] {
     border-radius: 0.5em;
     padding: 0 0.5em;
 
+    width: 100%;
     height: 2em;
 }
 
