--- a/index.css
+++ b/index.css
@@ -59,6 +59,11 @@ h6 {
     display: none;
 }
 
+input,
+button {
+    width: 100%;
+}
+
 input[type="url"],
 button {
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -75,7 +80,6 @@ input[type="url"] {
     border-radius: 0.5em;
     padding: 0 0.5em;
 
-    width: 100%;
     height: 2em;
 }
 
